--- a/thesis.bib
+++ b/thesis.bib
@@ -149,6 +149,20 @@
 
 @article
 {
+	Song2020,
+	title = {{Deep Learning Methods On Neutron Scattering Data}},
+	journal = "EPJ Web Conf.",
+	volume = "225",
+	pages = "01004",
+	year = "2020",
+	doi = "10.1051/epjconf/202022501004",
+	url = "http://doi.org/10.1051/epjconf/202022501004",
+	author = {Guanghan Song, Lionel Porcar, Martin B\"ohm, Franck Cecillon, Charles Dewhurst, Yannick Le Goc, J\'erome Locatelli, Paolo Mutti and Tobias Weber},
+}
+
+
+@article
+{
 	skxpaper,
 	author = {T. Weber and D. M. Fobes and J. Waizner and P. Steffens and G. S. Tucker and M. B\"ohm and L. Beddrich and C. Franz and H. Gabold and R. Bewley and D. Voneshen and M. Skoulatos and R. Georgii and G. Ehlers and A. Bauer and C. Pfleiderer and P. B\"oni and M. Janoschek and M. Garst},
 	title = {{Emergent Landau levels of magnons in a skyrmion lattice}},
