continued with intro and theory

--- a/errata.tex
+++ b/errata.tex
@@ -1,4 +1,5 @@
-\chapter{Errata}
-Up-to-date errata for this work will be published on-line under ...
-
-TODO
+\chapter{Errata and Online Resources}
+Up-to-date errata for this work, comprising the thesis text and the software, 
+will be published on-line under the DOI \href{https://doi.org/10.5281/zenodo.4625649}{10.5281/zenodo.4625649}.
+Additionally, the main software repository is available here: \url{https://code.ill.fr/scientific-software/takin/paths},
+a mirror of the repository can also be found here: \url{https://github.com/tweber-ill/ill_mirror-takin2-paths}.
