--- a/intro.tex
+++ b/intro.tex
@@ -62,7 +62,9 @@ As the name implies, the difference in set-up compared to the two-axis diffracto
 
 Up until the end of 2019, TAS experiments usually required external scientists to stay at the research reactor for typically one week and conduct the experiment together with the instrument's responsible scientists. Specifically at the Institut Laue-Langevin (ILL) there had already been attempts (e.g. \cite{Song2020}) of the instrument control and scientific computing groups to convince the instrument scientists of the benefits of instrumentation with full- or semi-autonomous as well as remote control. Nevertheless, the impact had been limited.
 
-The situation changed significantly with the Covid-19 pandemic. Receiving visiting scientists was not possible anymore, or only to a very limited degree. Instead, remote experimentation and instrument control became the new norm. Users now connect to a web interface from which the experiment can be planned and data can be analysed \footnote{https://visa.ill.eu}. Discussions with instrument scientists take place via web-cams that have been installed at every instrument.
+The situation changed significantly with the Covid-19 pandemic. Receiving visiting scientists was not possible anymore, or only to a very limited degree. Instead, remote experimentation and instrument control became the new norm. Users now connect to a web interface from which the experiment can be planned and data can be analysed \footnote{\url{https://visa.ill.eu}}. Discussions with instrument scientists take place via web-cams that have been installed at every instrument.
 
-At the same time, the idea to automate manual tasks at instruments using algorithms and AI has gained significant traction, with first autonomous experiments being attempted \footnote{https://www.ill.eu/news-press-events/news/scientific-news/machine-learning-at-ill-first-autonomous-steps-of-the-neutron-spectrometer-thales}.
-As part of the current drive towards autonomous experimentation at the ILL, the goal of the present work is the design and implementation of a software tool which enable an automatic path finding for TAS instruments. Automatic path finding is necessary for the instrument to circumvent obstacles in its path. Currently, this task has to be performed by the instrument scientists before each new scan series in a time-consuming fashion. The current approach requires the instrument to be  driven along the programmed scan path, but without measuring and with the neutron beam from the reactor closed. The insturment scientist has to stay in the instrument space and watch the instrument as it moves to every scan position. A manual stop has to be initiated when the instrument would collide with a wall or with itself or when the rotation of one of the axes would pull out a cable or tube.
+At the same time, the idea to automate manual tasks at instruments using algorithms and AI has gained significant traction, with first autonomous experiments being attempted \footnote{\url{https://www.ill.eu/news-press-events/news/scientific-news/machine-learning-at-ill-first-autonomous-steps-of-the-neutron-spectrometer-thales}}.
+As part of the current drive towards autonomous experimentation at the ILL, the goal of the present work is the design and implementation of a software tool which enable an automatic path finding for TAS instruments. Automatic path finding is necessary for the instrument to circumvent obstacles in its path. Currently, this task has to be performed by the instrument scientists before each new scan series in a time-consuming fashion. The current approach requires the instrument to be  driven along the programmed scan path, but without measuring and with the neutron beam from the reactor closed. The instrument scientist has to stay in the instrument space and watch the instrument as it moves to every scan position. A manual stop has to be initiated when the instrument would collide with a wall or with itself or when the rotation of one of the axes would pull out a cable or tube.
+
+In the next chapter, we will introduce the coordinate systems used in crystallography and at TAS instruments.
