--- a/thesis.bib
+++ b/thesis.bib
@@ -102,10 +102,24 @@
 }
 
 
+@article{
+	Takin2021,
+	title = {{Update 2.0 to ``Takin: An open-source software for experiment planning, visualisation, and data analysis'', (PII: S2352711016300152)}},
+	journal = {SoftwareX},
+	volume = {14},
+	pages = {100667},
+	year = {2021},
+	issn = {2352-7110},
+	doi = {10.1016/j.softx.2021.100667},
+	url = "https://www.sciencedirect.com/science/article/pii/S2352711021000121",
+	author = {Tobias Weber},
+}
+
+
 @article
 {
 	Takin2017,
-	title = {{Update 1.5 to ``Takin: An open-source software for experiment planning, visualisation, and data analysis, (PII: S2352711016300152)''}},
+	title = {{Update 1.5 to ``Takin: An open-source software for experiment planning, visualisation, and data analysis'', (PII: S2352711016300152)}},
 	journal = "SoftwareX",
 	volume = "6",
 	pages = "148 -- 149",
@@ -157,7 +171,7 @@
 	year = "2020",
 	doi = "10.1051/epjconf/202022501004",
 	url = "http://doi.org/10.1051/epjconf/202022501004",
-	author = {Guanghan Song, Lionel Porcar, Martin B\"ohm, Franck Cecillon, Charles Dewhurst, Yannick Le Goc, J\'erome Locatelli, Paolo Mutti and Tobias Weber},
+	author = {Guanghan Song and Lionel Porcar and Martin B\"ohm and Franck Cecillon and Charles Dewhurst and Yannick Le Goc and J\'erome Locatelli and Paolo Mutti and Tobias Weber},
 }
 
 
