continued with intro

--- a/theory_xtal.tex
+++ b/theory_xtal.tex
@@ -5,14 +5,16 @@
 % @license see 'LICENSE' file
 %
 
+{\bf \colorbox{yellow}{! CHAPTER IN PROGRESS, NOT YET FINISHED !}}
+\vspace{1cm}
 
-In this chapter we review the theory for conversion between crystal coordinates and scattering angles at the triple-axis instrument. Section \ref{sec:xtalcoords} introduces crystal coordinates and the so-called UB matrix formalism, section \ref{sec:tasangles} calculates the corresponding TAS angles. Note that sections \ref{sec:xtalcoords} and \ref{sec:tasangles} have been published in Ref. \cite{Takin2021} and are based on calculations in my PhD thesis \cite{TODO}.
- 
+In this chapter we review the theory for conversion between crystal coordinates and scattering angles at the triple-axis instrument. Section \ref{sec:xtalcoords} introduces crystal coordinates and the so-called UB matrix formalism, section \ref{sec:tasangles} calculates the corresponding TAS angles. Note that sections \ref{sec:xtalcoords} and \ref{sec:tasangles} have been published in Ref. \cite{Takin2021} and are based on an earlier version of these calculations in my (physics) PhD thesis \cite{PhDWeber}.
+
 
 % ------------------------------------------------------------------------------------------------------------------------------------
 \section{Fractional crystal coordinates \label{sec:xtalcoords}}
 
-We begin by presenting the UB matrix formalism to convert between relative lattice units and laboratory or instrument coordinates, which is described in \cite{Lumsden2005}. The derivation of the transformation matrix for fractional coordinates can be found in \cite{wiki_fractional}.
+We begin by presenting the UB matrix formalism to convert between relative lattice units and laboratory or instrument coordinates, which is described in \cite{Lumsden2005}. The derivation of the transformation matrices $A$ and $B$ for fractional coordinates can be found in \cite{wiki_fractional}, which we follow here.
 
 \begin{center}
 	\includegraphics[width = 0.2 \textwidth]{figures/cell}
