--- a/thesis.bib
+++ b/thesis.bib
@@ -215,3 +215,16 @@
 	howpublished = "\url{https://de.wikipedia.org/w/index.php?title=Naturreaktor_Oklo&oldid=203811915}",
 	note = "[Online; Stand 10. Februar 2021]"
 }
+
+
+@phdthesis{
+	PhDWeber,
+	author = "Weber, Tobias",
+	title = {{Dynamics at the Orbital Ordering Phase Transition in $MgV_2O_4$ and at the Ferromagnetic Phase Transition in $MnSi$}},
+	type = "Dissertation",
+	school = {Technische Universität M\"unchen, Physikdepartment E21},
+	address = {M\"unchen, Germany},
+	year = 2017,
+	isbn = {978-3-8439-3114-4},
+	url = {http://nbn-resolving.de/urn/resolver.pl?urn:nbn:de:bvb:91-diss-20170320-1339645-0-4},
+}
