--- a/thesis.tex
+++ b/thesis.tex
@@ -16,6 +16,7 @@
 \usepackage{graphicx}
 \usepackage{siunitx}
 \usepackage{babel}
+\usepackage[hyphens]{url}
 \usepackage[numbib, chapter]{tocbibind}
 \usepackage[colorlinks=true, linkcolor=black, citecolor=blue, urlcolor=blue, unicode=true]{hyperref}
 \usepackage[a4paper]{geometry}
@@ -40,13 +41,13 @@
 
 
 % ====================================================================================================================================
-\part{Front matter}
+%\part{Front matter}
 %\addcontentsline{toc}{part}{Front matter} 
 \input{abstract.tex}
 \input{acknowledgements.tex}
 
 
-\part{Main part}
+%\part{Main part}
 
 \chapter{Introduction}
 \input{intro.tex}
@@ -63,7 +64,7 @@
 
 
 \appendix
-\part{Back matter}
+%\part{Back matter}
 %\addcontentsline{toc}{part}{Back matter} 
 \input{notation.tex}
 \input{publications.tex}
