--- a/theory_xtal.tex
+++ b/theory_xtal.tex
@@ -5,7 +5,7 @@
 % @license see 'LICENSE' file
 %
 
-{\bf \colorbox{yellow}{! CHAPTER IN PROGRESS, NOT YET FINISHED !}}
+{\bf \colorbox{yellow}{! EARLY DRAFT VERSION, STILL IN PROGRESS, NOT YET FINISHED !}}
 \vspace{1cm}
 
 In this chapter we review the theory for conversion between crystal coordinates and scattering angles at the triple-axis instrument. Section \ref{sec:xtalcoords} introduces crystal coordinates and the so-called UB matrix formalism, section \ref{sec:tasangles} calculates the corresponding TAS angles. Note that sections \ref{sec:xtalcoords} and \ref{sec:tasangles} have been published in Ref. \cite{Takin2021} and are based on an earlier version of these calculations in my (physics) PhD thesis \cite{PhDWeber}.
