--- a/thesis.tex
+++ b/thesis.tex
@@ -31,7 +31,7 @@
 \newcommand{\fuh}{Fernuniversit\"at in Hagen (FUH), Universit\"atsstraße 47, 58097 Hagen, Germany}
 
 
-\title{Automatic path-finding for triple-axis spectrometers}
+\title{Path-finding for triple-axis spectrometers}
 \author{Tobias Weber, tweber@ill.fr}
 
 \maketitle
